added CSS and modified navbar

--- a/HTML/home_page.xhtml
+++ b/HTML/home_page.xhtml
@@ -3,27 +3,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>Home - Quranic Stylometrics</title>
+        <link rel="stylesheet" type="text/css" href="home_page.css" />
     </head>
+
+
     <body>
-        <p>Welcoming words for users</p>
-        <div>
-            <a href="#section1"> Home </a>
+        <div class="container">
+            <nav class="navbar">
+                <div class="navbar-links">
+                    <a href="#section1">Home</a>
+                    <a href="#section2">About</a>
+                    <a href="#section3">Methods</a>
+                    <a href="#section4">Texts</a>
+                    <a href="#section5">Analysis</a>
+                    <a href="#section6">Conclusions</a>
+                </div>
+            </nav>
+
+            <p>Welcoming words for users</p>
+
+            <div class="image-container">
+                <img
+                    src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/453024/882518/main-image"
+                    alt="Quranic Manuscript Image from Met Museum Collection. Dated 1851-52 CE" />
+            </div>
         </div>
-        <div>
-            <a href="#section2"> About </a>
-        </div>
-        <div>
-            <a href="#section3"> Methods </a>
-        </div>
-        <div>
-            <a href="#section4"> Texts </a>
-        </div>
-        <div>
-            <a href="#section5"> Analysis </a>
-        </div>
-        <div>
-            <a href="#section6"> Conclusions </a>
-        </div>
-        <img src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/453024/882518/main-image" alt="Quranic Manuscript Image from Met Museum Collection. Dated 1851-52 CE"/>
     </body>
 </html>
