added CSS and modified navbar

--- a/HTML/methods_page.xhtml
+++ b/HTML/methods_page.xhtml
@@ -3,15 +3,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>Methodology - Quranic Stylometrics</title>
+        <link rel="stylesheet" type="text/css" href="pages.css" />
     </head>
     <body>
-        <div class="navbar">
-            <a href="#section1"> Home </a>
-            <a href="#section2"> About </a>
-            <a> Methods </a>
-            <a href="#section4"> Texts </a>
-            <a href="#section5"> Analysis </a>
-            <a href="#section6"> Conclusions </a>
+        <div class="container">
+            <nav class="navbar">
+                <div class="navbar-links">
+                    <a href="#section1">Home</a>
+                    <a href="section2">About</a>
+                    <a class="active">Methods</a>
+                    <a href="#section4">Texts</a>
+                    <a href="#section5">Analysis</a>
+                    <a href="#section6">Conclusions</a>
+                </div>
+            </nav>
         </div>
         <!-- copied the navbar from my HTML assignments, here's the CSS I used, tinker with it as you see fit!  
 .navbar {
@@ -20,7 +25,6 @@
     position: fixed;
     width: 100%;
 }
-
 .navbar a {
     display: block;
     color: white;
@@ -35,7 +39,5 @@
             <li>Sources of texts</li>
             <li>Digital Humanities Basic Intro</li>
         </ul>
-        
-        
     </body>
 </html>
