added new CSS to all XHTML files

--- a/Website/conclusions_page.xhtml
+++ b/Website/conclusions_page.xhtml
@@ -3,14 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>Conclusions - Quranic Stylometrics</title>
-        <link rel="stylesheet" type="text/css" href="pages.css" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
         <div class="container">
             <nav class="navbar">
                 <div class="navbar-links">
                     <a href="#section1">Home</a>
-                    <a href="section2">About</a>
+                    <a href="#section2">About</a>
                     <a href="#section3">Methods</a>
                     <a href="#section4">Texts</a>
                     <a href="#section5">Analysis</a>
