--- a/Website/home_page.xhtml
+++ b/Website/home_page.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>Home - Quranic Stylometrics</title>
-        <link rel="stylesheet" type="text/css" href="home_page.css" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
 
 
