--- a/Website/texts_page.xhtml
+++ b/Website/texts_page.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>Texts - Quranic Stylometrics</title>
-        <link rel="stylesheet" type="text/css" href="pages.css" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
         <div class="container">
