--- a/Website/index.xhtml
+++ b/Website/index.xhtml
@@ -8,25 +8,18 @@
 
 
     <body>
-        <div class="container">
-            <nav class="navbar">
-                <div class="navbar-links">
-                    <a href="#section1">Home</a>
-                    <a href="#section2">About</a>
-                    <a href="#section3">Methods</a>
-                    <a href="#section4">Texts</a>
-                    <a href="#section5">Analysis</a>
-                    <a href="#section6">Conclusions</a>
-                </div>
-            </nav>
-
-            <p>Welcoming words for users</p>
-
-            <div class="image-container">
-                <img
-                    src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/453024/882518/main-image"
-                    alt="Quranic Manuscript Image from Met Museum Collection. Dated 1851-52 CE" />
-            </div>
+        
+        <!--#include virtual="menu.xhtml" -->
+        
+        <h1>سلام عليكم</h1>
+        <h2>Welcome!</h2>
+        <h3>This site presents a cross-linguistic analysis of Qur'anic poetics using the tools and
+            techniques of digital humanities. </h3>
+        <p>Welcoming words for users</p>
+        <div class="image-container">
+            <img
+                src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/453024/882518/main-image"
+                alt="Quranic Manuscript Image from Met Museum Collection. Dated 1851-52 CE" />
         </div>
     </body>
 </html>
