--- a/Website/methods_page.xhtml
+++ b/Website/methods_page.xhtml
@@ -6,34 +6,9 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
-        <div class="container">
-            <nav class="navbar">
-                <div class="navbar-links">
-                    <a href="#section1">Home</a>
-                    <a href="section2">About</a>
-                    <a class="active">Methods</a>
-                    <a href="#section4">Texts</a>
-                    <a href="#section5">Analysis</a>
-                    <a href="#section6">Conclusions</a>
-                </div>
-            </nav>
-        </div>
-        <!-- copied the navbar from my HTML assignments, here's the CSS I used, tinker with it as you see fit!  
-.navbar {
-    background-color: #40826D;
-    top: 0;
-    position: fixed;
-    width: 100%;
-}
-.navbar a {
-    display: block;
-    color: white;
-    text-align: center;
-    font-size: 35px;
-    float: left;
-    padding: 14px 16px;
-}      
-        -->
+        
+        <!--#include virtual="menu.xhtml" -->
+        
         <ul>
             <li>Explanation of Mark-Up: what we tagged for and what they mean</li>
             <li>Sources of texts</li>
