background boxes added[C

--- a/Website/index.xhtml
+++ b/Website/index.xhtml
@@ -11,11 +11,11 @@
         
         <!--#include virtual="menu.xhtml" -->
         
-        <h1>سلام عليكم</h1>
-        <h2>Welcome!</h2>
-        <h3>This site presents a cross-linguistic analysis of Qur'anic poetics using the tools and
-            techniques of digital humanities. </h3>
-        <p>Welcoming words for users</p>
+        <div class="boxed"><h1>سلام عليكم</h1></div>
+        <div class="boxed"><h2>Welcome!</h2></div>
+       <div class="boxed"> <p>This site presents a cross-linguistic analysis of Qur'anic poetics using the tools and
+            techniques of digital humanities. </p></div>
+
         <div class="image-container">
             <img
                 src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/453024/882518/main-image"
