added id attribute to body element

--- a/Website/analysis_page.xhtml
+++ b/Website/analysis_page.xhtml
@@ -5,7 +5,7 @@
         <title>Analysis - Quranic Stylometrics</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
-    <body>
+    <body id="analysis">
         
         <!--#include virtual="menu.xhtml" -->
         
