--- a/Website/conclusions_page.xhtml
+++ b/Website/conclusions_page.xhtml
@@ -5,7 +5,7 @@
         <title>Conclusions - Quranic Stylometrics</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
-    <body>
+    <body id="conclusions">
         
         <!--#include virtual="menu.xhtml" -->
         
