--- a/Website/methods_page.xhtml
+++ b/Website/methods_page.xhtml
@@ -5,7 +5,7 @@
         <title>Methodology - Quranic Stylometrics</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
-    <body>
+    <body id="methods">
         
         <!--#include virtual="menu.xhtml" -->
         
