--- a/Website/texts_page.xhtml
+++ b/Website/texts_page.xhtml
@@ -5,7 +5,7 @@
         <title>Texts - Quranic Stylometrics</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
-    <body>
+    <body id="texts">
         
         <!--#include virtual="menu.xhtml" -->
         
