--- a/Website/menu.xhtml
+++ b/Website/menu.xhtml
@@ -1,12 +1,12 @@
     <div class="container">
         <nav class="navbar">
             <div class="navbar-links">
-                <a href="index.xhtml">Home</a>
-                <a href="background_page.xhtml">About</a>
-                <a href="methods_page.xhtml">Methods</a>
-                <a href="texts_page.xhtml">Texts</a>
-                <a href="analysis_page.xhtml">Analysis</a>
-                <a href="conclusions_page.xhtml">Conclusions</a>
+                <a href="index.xhtml" class="index">Home</a>
+                <a href="background_page.xhtml" class="about">About</a>
+                <a href="methods_page.xhtml" class="methods">Methods</a>
+                <a href="texts_page.xhtml" class="texts">Texts</a>
+                <a href="analysis_page.xhtml" class="analysis">Analysis</a>
+                <a href="conclusions_page.xhtml" class="conclusions">Conclusions</a>
             </div>
         </nav>
     </div>
