--- a/xslt/surah_01.xhtml
+++ b/xslt/surah_01.xhtml
@@ -4,44 +4,44 @@
       <link rel="stylesheet" type="text/css" href="../Website/readingview.css"/><script type="application/javascript" src="../Website/readingview.js"></script><title>Surah 1</title>
    </head>
    <body>
-      <div class="checkbox-container"><label><input type="checkbox" name="amplification"/>Amplification</label><label><input type="checkbox" id="emph"/>Emphasis</label><label><input type="checkbox" id="irony"/>Irony</label><label><input type="checkbox" id="imagery"/>Imagery</label><label><input type="checkbox" id="allusion"/>Allusion</label><label><input type="checkbox" id="contrast"/>Contrast</label><label><input type="checkbox" id="name"/>Name</label><label><input type="checkbox" id="place"/>Place</label><label><input type="checkbox" id="rhetoricalQuestion"/>Rhetorical
+      <div class="checkbox-container"><label><input type="checkbox" id="amplification"/>Amplification</label><label class="emph"><input type="checkbox" id="emph"/>Emphasis</label><label><input type="checkbox" id="irony"/>Irony</label><label><input type="checkbox" id="imagery"/>Imagery</label><label><input type="checkbox" id="allusion"/>Allusion</label><label><input type="checkbox" id="contrast"/>Contrast</label><label><input type="checkbox" id="name"/>Name</label><label><input type="checkbox" id="place"/>Place</label><label><input type="checkbox" id="rhetoricalQuestion"/>Rhetorical
             Question</label><label><input type="checkbox" id="motif"/>Motif</label><label><input type="checkbox" id="anaphora"/>Anaphora</label><label><input type="checkbox" id="parallelism"/>Parallelism</label><label><input type="checkbox" id="metaphor"/>Metaphor</label><label><input type="checkbox" id="simile"/>Simile</label></div>
       <main>
-         <div lang="">(1) الرَّحْمَٰنِ
-            الرَّحِيمِبِسْمِ اللَّهِ</div>
-         <div lang="">(1)  In the name of Allah,Most Gracious,
-            Most Merciful.</div>
-         <div lang="">(1)  In the name of Allah, Most Gracious,
-            Most Merciful.</div>
-         <div lang="">(1)  In the name of Allah, the Beneficent,
-            the Merciful. </div>
-         <div lang="">(2) الْحَمْدُ لِلَّهِ
-            رَبِّ الْعَالَمِينَ</div>
+         <div lang="">(1) <span class="amplification">الرَّحْمَٰن</span>ِ<span class="amplification">
+               الرَّحِيمِ</span><span class="amplification">بِسْمِ اللَّهِ</span></div>
+         <div lang="">(1)  In the name of Allah,<span class="amplification">Most Gracious</span>,
+            <span class="amplification">Most Merciful.</span></div>
+         <div lang="">(1)  In the name of Allah, <span class="amplification">Most Gracious</span>,
+            <span class="amplification">Most Merciful.</span></div>
+         <div lang="">(1)  In the name of Allah, <span class="amplification">the Beneficent</span>,
+            <span class="amplification">the Merciful</span>. </div>
+         <div lang="">(2) <span class="amplification">الْحَمْدُ لِلَّهِ</span>
+            <span class="amplification">رَبِّ الْعَالَمِينَ</span></div>
          <div lang="">(2) 
-            Praise be to Allah, the
-            Cherisher and Sustainer of the
-            worlds;</div>
-         <div lang="">(2)  Praise be to Allah, the Cherisher and
-            Sustainer of the worlds;</div>
+            <span class="amplification">Praise be to Allah, </span><span class="amplification">the
+               Cherisher</span> and <span class="amplification">Sustainer of the
+               worlds</span>;</div>
+         <div lang="">(2)  Praise be to Allah, <span class="amplification">the Cherisher</span> and
+            <span class="amplification">Sustainer of the worlds</span>;</div>
          <div lang="">(2) 
-            Praise be to Allah, Lord of the
-            Worlds, </div>
-         <div lang="">(3) الرَّحْمَٰنِ
-            الرَّحِيمِ</div>
+            <span class="amplification">Praise be to Allah</span>, <span class="amplification">Lord of the
+               Worlds</span>, </div>
+         <div lang="">(3) <span class="amplification">الرَّحْمَٰنِ</span>
+            <span class="amplification">الرَّحِيمِ</span></div>
          <div lang="">(3) 
-            Most Gracious, Most
-            Merciful; </div>
-         <div lang="">(3)  &gt;Most Gracious, Most
-            Merciful; </div>
+            <span class="amplification">Most Gracious</span>, <span class="amplification">Most
+               Merciful</span>; </div>
+         <div lang="">(3)  &gt;<span class="amplification">Most Gracious</span>, <span class="amplification">Most
+               Merciful</span>; </div>
          <div lang="">(3) 
-            The Beneficent, the
-            Merciful. </div>
-         <div lang="">(4) مَالِكِ يَوْمِ الدِّينِ</div>
+            <span class="amplification">The Beneficent</span>, <span class="amplification">the
+               Merciful</span>. </div>
+         <div lang="">(4) <span class="amplification">مَالِكِ يَوْمِ الدِّينِ</span></div>
          <div lang="">(4) 
-            Master of the Day of Judgment.
+            <span class="amplification">Master of the Day of Judgment.</span>
             </div>
          <div lang="">(4) 
-            Master of the Day of Judgment, </div>
+            <span class="amplification">Master of the Day of Judgment</span>, </div>
          <div lang="">(5) إِيَّاكَ نَعْبُدُ وَإِيَّاكَ
             نَسْتَعِينُ</div>
          <div lang="">(5)  Thee do we worship, and Thine aid we seek.</div>
