--- a/Website/methods_page.xhtml
+++ b/Website/methods_page.xhtml
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body id="methods">
-        <!--#include virtual="menu.xhtml" -->
+        <div><!--#include virtual="menu.xhtml" --></div>
         <div class="boxed">
             <h1>Methodology</h1>
         </div>
@@ -70,8 +70,8 @@
                         and a great reward."</span></li>
 
                 <li><span>Irony:</span> The use of words to convey a meaning that is opposite of
-                    what is actually said.<span>Example: </span><span class="ex"> "Give good news of a
-                        painful punishment to hypocrites,"</span></li>
+                    what is actually said.<span>Example: </span><span class="ex"> "Give good news of
+                        a painful punishment to hypocrites,"</span></li>
 
                 <li><span>Rhetorical Question:</span> A question asked in order to create a dramatic
                     effect or to make a point rather than to get an answer.<span>Example:
