--- a/Website/methods_page.xhtml
+++ b/Website/methods_page.xhtml
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body id="methods">
-        <div><!--#include virtual="menu.xhtml" --></div>
+        
         <div class="boxed">
             <h1>Methodology</h1>
         </div>
@@ -84,5 +84,6 @@
                         >Lo!"</span></li>
             </ul>
         </div>
+        <!--#include virtual="menu.xhtml" -->
     </body>
 </html>
