--- a/Website/background_page.xhtml
+++ b/Website/background_page.xhtml
@@ -37,11 +37,11 @@
                 text was collected and canonized under the caliphate of Rashidun Uthman, around 650
                 CE.</p>
 
-            <p><span>The Holy Qur'an, trans. Yusuf Ali:</span> <span class="Author Ali">Abdullah Yusuf Ali</span> (1872–1953) was an
+            <p><span>The Holy Qur'an, trans. Yusuf Ali:</span> <span class="author ali">Abdullah Yusuf Ali</span> (1872–1953) was an
                 Indian Islamic scholar. His translation of the Qur'an was published in 1938 and
                 remains one of the most widely-known and used translation in the English-speaking
                 world.</p>
-            <p><span>The Glorious Qur'an, trans. Pickthall:</span> <span class="Author Pickthall">Muhammed Marmaduke Pickthall</span>
+            <p><span>The Glorious Qur'an, trans. Pickthall:</span> <span class="author aickthall">Muhammed Marmaduke Pickthall</span>
                 (1875 – 1936) was an English-born novelist and scholar of the Islamic World who
                 converted to Islam in 1917. Pickthall was a novelist and a contemporary of writers
                 like D.H. Lawrence, H.G. Well, and E.M. Forster, but he is perhaps best known The
