--- a/Website/background_page.xhtml
+++ b/Website/background_page.xhtml
@@ -41,7 +41,7 @@
                 Indian Islamic scholar. His translation of the Qur'an was published in 1938 and
                 remains one of the most widely-known and used translation in the English-speaking
                 world.</p>
-            <p><span>The Glorious Qur'an, trans. Pickthall:</span> <span class="author aickthall">Muhammed Marmaduke Pickthall</span>
+            <p><span>The Glorious Qur'an, trans. Pickthall:</span> <span class="author pickthall">Muhammed Marmaduke Pickthall</span>
                 (1875 – 1936) was an English-born novelist and scholar of the Islamic World who
                 converted to Islam in 1917. Pickthall was a novelist and a contemporary of writers
                 like D.H. Lawrence, H.G. Well, and E.M. Forster, but he is perhaps best known The
