--- a/Website/background_page.xhtml
+++ b/Website/background_page.xhtml
@@ -38,21 +38,23 @@
                 CE.</p>
 
             <p><span>The Holy Qur'an, trans. Yusuf Ali:</span>
-                <span class="author"><a href="#" class="ali"><img
-                            src="https://upload.wikimedia.org/wikipedia/en/8/8c/Abdullah_Yusuf_Ali_1911.jpg"
-                            alt="Abdullah Yusuf Ali" /></a>Abdullah Yusuf Ali</span> (1872–1953) was
-                an Indian Islamic scholar. His translation of the Qur'an was published in 1938 and
+                <span class="author ali"><img
+                        src="https://upload.wikimedia.org/wikipedia/en/8/8c/Abdullah_Yusuf_Ali_1911.jpg"
+                        alt="Abdullah Yusuf Ali" />Abdullah Yusuf Ali</span> (1872–1953) was an
+                Indian Islamic scholar. His translation of the Qur'an was published in 1938 and
                 remains one of the most widely-known and used translation in the English-speaking
                 world.</p>
+
             <p><span>The Glorious Qur'an, trans. Pickthall:</span>
-                <span class="author"><a href="#" class="pickthall"><img
-                            src="https://upload.wikimedia.org/wikipedia/commons/7/71/Marmaduke_Pickthall_Portrait.jpg"
-                            alt="Muhammed Marmaduke Pickthall" /></a>Muhammed Marmaduke
-                    Pickthall</span> (1875 – 1936) was an English-born novelist and scholar of the
-                Islamic World who converted to Islam in 1917. Pickthall was a novelist and a
-                contemporary of writers like D.H. Lawrence, H.G. Well, and E.M. Forster, but he is
-                perhaps best known The Meaning of the Glorious Koran, an English language
-                translation of the holy text with exegis.</p>
+                <span class="author pickthall"><img
+                        src="https://upload.wikimedia.org/wikipedia/commons/7/71/Marmaduke_Pickthall_Portrait.jpg"
+                        alt="Muhammed Marmaduke Pickthall" />Muhammed Marmaduke Pickthall</span>
+                (1875 – 1936) was an English-born novelist and scholar of the Islamic World who
+                converted to Islam in 1917. Pickthall was a novelist and a contemporary of writers
+                like D.H. Lawrence, H.G. Well, and E.M. Forster, but he is perhaps best known The
+                Meaning of the Glorious Koran, an English language translation of the holy text with
+                exegis.</p>
+
         </div>
         <div class="boxed">
             <h3> About this Project</h3>
