--- a/Website/surah_01.xhtml
+++ b/Website/surah_01.xhtml
@@ -6,6 +6,10 @@
    <body>
       <div class="checkbox-container"><label class="amplification"><input type="checkbox" id="amplification"/>Amplification</label><label class="emph"><input type="checkbox" id="emph"/>Emphasis</label><label class="irony"><input type="checkbox" id="irony"/>Irony</label><label class="imagery"><input type="checkbox" id="imagery"/>Imagery</label><label class="allusion"><input type="checkbox" id="allusion"/>Allusion</label><label class="contrast"><input type="checkbox" id="contrast"/>Contrast</label><label class="name"><input type="checkbox" id="name"/>Name</label><label class="place"><input type="checkbox" id="place"/>Place</label><label class="rhetoricalQuestion"><input type="checkbox" id="rhetoricalQuestion"/>Rhetorical
             Question</label><label class="motif"><input type="checkbox" id="motif"/>Motif</label><label class="anaphora"><input type="checkbox" id="anaphora"/>Anaphora</label><label class="parallelism"><input type="checkbox" id="parallelism"/>Parallelism</label><label class="metaphor"><input type="checkbox" id="metaphor"/>Metaphor</label><label class="simile"><input type="checkbox" id="simile"/>Simile</label></div>
+      <div>
+         <p>This Surah Has:</p>
+         <p></p>
+      </div>
       <main>
          <div lang="ar">(1) <span class="amplification">الرَّحْمَٰن</span>ِ<span class="amplification">
                الرَّحِيمِ</span><span class="amplification">بِسْمِ اللَّهِ</span></div>
@@ -33,19 +37,17 @@
             </div>
          <div lang="en">(4) 
             <span class="amplification">Master of the Day of Judgment</span>, </div>
-         <div lang="ar">(5) إِيَّاكَ نَعْبُدُ وَإِيَّاكَ
-            نَسْتَعِينُ</div>
+         <div lang="ar">(5) <span class="anaphora">إِيَّاكَ نَعْبُدُ وَإِيَّاكَ
+               نَسْتَعِينُ</span></div>
          <div lang="en">(5)  Thee do we worship, and Thine aid we seek.</div>
-         <div lang="en">(5)  Thee (alone) we worship; Thee (alone) we ask
-            for help.
+         <div lang="en">(5) <span class="parallelism"> Thee (alone) we worship; Thee (alone) we ask
+               for help.</span>
             </div>
          <div lang="ar">(6) اهْدِنَا الصِّرَاطَ الْمُسْتَقِيمَ</div>
          <div lang="en">(6)  Show us the straight way,</div>
          <div lang="en">(6)  Show us the straight path, </div>
          <div lang="ar">(7) صِرَاطَ الَّذِينَ أَنْعَمْتَ عَلَيْهِمْ غَيْرِ الْمَغْضُوبِ عَلَيْهِمْ وَلَا
             الضَّالِّينَ</div>
-         <div lang="en">(7)  The way of those on whom Thou hast bestowed Thy Grace, those whose (portion) is
-            not wrath, and who go not astray. </div>
          <div lang="en">(7)  The way of those on whom Thou hast bestowed Thy Grace, those whose (portion) is
             not wrath, and who go not astray. </div>
          <div lang="en">(7)  The path of those whom Thou hast favoured; Not the (path) of those who earn
