--- a/Website/background_page.xhtml
+++ b/Website/background_page.xhtml
@@ -14,6 +14,10 @@
     <body id="about">
         <!--#include virtual="menu.xhtml" -->
         <div class="boxed">
+            <div class="boxed">
+                <h1>About</h1>
+            </div>
+            
             <h3>Background</h3>
             <p>The Qur'an is the central religious text of Islam and is believed by Muslims to be
                 the literal word of God as dictated as revealed to the Prophet Mohammed. The Qur'an
