--- a/Website/background_page.xhtml
+++ b/Website/background_page.xhtml
@@ -17,21 +17,24 @@
             <div class="boxed">
                 <h1>About</h1>
             </div>
-            
-            <h3>Background</h3>
-            <p>The Qur'an is the central religious text of Islam and is believed by Muslims to be
-                the literal word of God as dictated as revealed to the Prophet Mohammed. The Qur'an
-                is thought to be the only holy book that exists today in the precise form and
-                content in which it was originally produced and has consequently been preserved and
-                documented extensively by Islamic scholars over the last 1,400 years. Arabic is the
-                language of the Qur'an and thus also the liturgical language of Islam. For that
-                reason, Muslims of all nationalities practice rote recitation of the Qur'an in its
-                original Arabic. As a result of this unique etiology, the Qur'an is sometimes called
-                “untranslateable” or inimitable, because to render it into another language would be
-                to transform the already perfect and divine words of God. Nevertheless, the growth
-                of Islam as a global religion with over <span>1.9 billion adherents </span> has
-                necessitated interpretations of the Qur'an into different languages. This project
-                began with the question, what is lost in translation?</p>
+
+            <div class="boxed">
+                <h3>Background</h3>
+                <p>The Qur'an is the central religious text of Islam and is believed by Muslims to
+                    be the literal word of God as dictated as revealed to the Prophet Mohammed. The
+                    Qur'an is thought to be the only holy book that exists today in the precise form
+                    and content in which it was originally produced and has consequently been
+                    preserved and documented extensively by Islamic scholars over the last 1,400
+                    years. Arabic is the language of the Qur'an and thus also the liturgical
+                    language of Islam. For that reason, Muslims of all nationalities practice rote
+                    recitation of the Qur'an in its original Arabic. As a result of this unique
+                    etiology, the Qur'an is sometimes called “untranslateable” or inimitable,
+                    because to render it into another language would be to transform the already
+                    perfect and divine words of God. Nevertheless, the growth of Islam as a global
+                    religion with over <span>1.9 billion adherents </span> has necessitated
+                    interpretations of the Qur'an into different languages. This project began with
+                    the question, what is lost in translation?</p>
+            </div>
         </div>
         <div class="boxed">
             <h3>Our Texts</h3>
