added content from background page and added text overlay when hovering over image

--- a/Website/index.xhtml
+++ b/Website/index.xhtml
@@ -8,15 +8,46 @@
 
 
     <body id="index">
-        
         <!--#include virtual="menu.xhtml" -->
-        
-        <div class="boxed"><h1>سلام عليكم</h1></div>
-        <div class="boxed"><h2>Welcome!</h2></div>
-       <div class="boxed"> <p>This site presents a cross-linguistic analysis of Qur'anic poetics using the tools and
-            techniques of digital humanities. </p></div>
-
         <div class="image-container">
+            <div class="overlay">
+                <div class="boxed">
+                    <h1>سلام عليكم</h1>
+                    <h2>Welcome!</h2>
+                    <p>This site presents a cross-linguistic analysis of Qur'anic poetics using the
+                        tools and techniques of digital humanities. The goal of this site and
+                        project were to answer the following questions: What are the most common
+                        rhetorical devices used in the Arabic original text and the two English
+                        translations by Ali and Pickthall? How do the frequencies and distributions
+                        of devices compare across the three texts?</p>
+                </div>
+
+                <div class="boxed">
+                    <h3> About this Project</h3>
+                    <p>This project was conceived and designed to fulfil the term project
+                        requirement for the course titled Computational Methods in Humanities,
+                        taught by Dr. David Birnbaum at the University of Pittsburgh. This project
+                        utilizes many of the tools and technologies we studied this past
+                        semester.</p>
+                </div>
+                <div class="boxed">
+                    <h3>About the Developers</h3>
+                    <p><span>Mary Kathleen Dryer</span> is a Master's student of Applied
+                        Linguistics. She completed her undergraduate degree in Linguistics and
+                        Political Science at Pitt in 2018 alongside a certificate in Arabic Language
+                        &amp; Culture. Mary Kathleen is interested in how language shapes cultural
+                        narratives and in what our language choices reveal about our selves.</p>
+                    <p><span>Austin Malone</span> is a sophomore majoring in Urban Studies. He is a
+                        native of Tennessee. His extracurricular interests include reading, hiking,
+                        and cooking. Austin has a particular interest in world religions.</p>
+                    <p><span>Aisha Vallopra</span> is a senior majoring in Molecular Biology with a
+                        certificate in Community Health Assessment and minors in Chemistry and
+                        Religious Studies. She's read multiple English translations of the Qur'an
+                        and wanted to try engaging with the texts through her newly-developed
+                        computational humanities skills.</p>
+                </div>
+            </div>
+
             <img
                 src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/453024/882518/main-image"
                 alt="Quranic Manuscript Image from Met Museum Collection. Dated 1851-52 CE" />
