--- a/Website/surah_01.xhtml
+++ b/Website/surah_01.xhtml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
    <head>
-      <link rel="stylesheet" type="text/css" href="../Website/style.css" />
-      <link rel="stylesheet" type="text/css" href="../Website/readingview.css" />
-      <script type="application/javascript" src="../Website/readingview.js"></script>
+      <link rel="stylesheet" type="text/css" href="style.css" />
+      <link rel="stylesheet" type="text/css" href="readingview.css" />
+      <script type="application/javascript" src="readingview.js"></script>
       <title>Surah1</title>
    </head>
    <body>
