--- a/Website/texts_page.xhtml
+++ b/Website/texts_page.xhtml
@@ -7,6 +7,9 @@
     </head>
     <body id="texts">
         <!--#include virtual="menu.xhtml" -->
+        <div class="boxed">
+            <h1>Texts</h1>
+        </div>
         <div class="textnavbar" id="imageNavbar">
             <div class="flexbox">
                 <div class="fleximage">
