add research qs and beef up landing page

--- a/Website/index.xhtml
+++ b/Website/index.xhtml
@@ -14,18 +14,16 @@
                 <div class="boxed">
                     <h1>سلام عليكم</h1>
                     <h2>Welcome!</h2>
-                    <p>This site presents a cross-linguistic analysis of Qur'anic poetics using the
-                        tools and techniques of digital humanities. The goal of this site and
-                        project were to answer the following questions: What are the most common
-                        rhetorical devices used in the Arabic original text and the two English
-                        translations by Ali and Pickthall? How do the frequencies and distributions
-                        of devices compare across the three texts?</p>
+                    <p>The Qur'an is the primary holy text of Islam. It is famous in part due to its beautiful prose and poetry. This project presents a cross-linguistic 
+                        analysis of certain selected verses from the Qur'an in its original Arabic and its two most famous English interpretations. Using the tools and techniques of digital humanities,  
+                        we investigate how stylistic and rhetorical devices present in the original text are interpreted in the English translations, with the goal of gaining a better understanding of how a text is transformed
+                        when it undergoes translation.</p>
                 </div>
 
                 <div class="boxed">
                     <h3> About this Project</h3>
-                    <p>This project was conceived and designed to fulfil the term project
-                        requirement for the course titled Computational Methods in Humanities,
+                    <p>This project was conceived and designed to fulfil the
+                        requirements of the course "Computational Methods in Humanities,"
                         taught by Dr. David Birnbaum at the University of Pittsburgh. This project
                         utilizes many of the tools and technologies we studied this past
                         semester.</p>
@@ -45,6 +43,8 @@
                         Religious Studies. She's read multiple English translations of the Qur'an
                         and wanted to try engaging with the texts through her newly-developed
                         computational humanities skills.</p>
+                    <p>The developers would like to extend our thanks to <span>Renee Dubaich</span>, our project mentor, for her thoughtful guidance and feedback, as well as 
+                    <span>Dr. Amani Attia</span>, who provided invaluable cultural and literary insight.</p>
                 </div>
             </div>
 
