modified reading view

--- a/Website/surah_01.xhtml
+++ b/Website/surah_01.xhtml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
    <head>
-      <link rel="stylesheet" type="text/css" href="style.css" />
-      <link rel="stylesheet" type="text/css" href="readingview.css" />
-      <script type="application/javascript" src="readingview.js"></script>
+      <link rel="stylesheet" type="text/css" href="../QuranWebsite/style.css" />
+      <link rel="stylesheet" type="text/css" href="../QuranWebsite/readingview.css" />
+      <script type="application/javascript" src="../QuranWebsite/readingview.js"></script>
       <title>Surah1</title>
    </head>
    <body>
@@ -26,86 +26,60 @@
          <label class="simile"><input type="checkbox" id="simile" />Simile</label>
       </div>
       <main>
-         <div class="grid-4-column">
-
-            <div>
-               <h2>Ayah</h2>
-               <div>1</div>
-               <div>2</div>
-               <div>3</div>
-               <div>4</div>
-               <div>5</div>
-               <div>6</div>
-               <div>7</div>
+         <div id="div1">
+            <h2>Arabic</h2>
+            <div lang="ar"> (1) <span class="amplification">الرَّحْمَٰن</span>ِ<span
+                  class="amplification"> الرَّحِيمِ</span><span class="amplification">بِسْمِ
+                  اللَّهِ</span></div>
+            <div lang="ar">(2) <span class="amplification">الْحَمْدُ لِلَّهِ</span>
+               <span class="amplification">رَبِّ الْعَالَمِينَ</span></div>
+            <div lang="ar"> (3)<span class="amplification">الرَّحْمَٰنِ</span>
+               <span class="amplification">الرَّحِيمِ</span></div>
+            <div lang="ar">(4) <span class="amplification">مَالِكِ يَوْمِ الدِّينِ</span></div>
+            <div lang="ar">(5) <span class="anaphora">إِيَّاكَ نَعْبُدُ وَإِيَّاكَ
+                  نَسْتَعِينُ</span></div>
+            <div lang="ar"> (6)اهْدِنَا الصِّرَاطَ الْمُسْتَقِيمَ</div>
+            <div lang="ar">(7) صِرَاطَ الَّذِينَ أَنْعَمْتَ عَلَيْهِمْ غَيْرِ الْمَغْضُوبِ
+               عَلَيْهِمْ وَلَا الضَّالِّينَ</div>
+         </div>
+         <div id="div2">
+            <h2>Ali</h2>
+            <div lang="en"> (1) In the name of Allah, <span class="amplification">Most Gracious</span>,
+                  <span class="amplification">Most Merciful.</span></div>
+            <div lang="en"> (2) Praise be to Allah, <span class="amplification">the Cherisher</span> and
+                  <span class="amplification">Sustainer of the worlds</span>;</div>
+            <div lang="en"> (3)
+               <span class="amplification">Most Gracious</span>, <span class="amplification">Most
+                  Merciful</span>; </div>
+            <div lang="en"> (4)
+               <span class="amplification">Master of the Day of Judgment.</span>
             </div>
-
-            <div>
-               <h2>Arabic</h2>
-               <div lang="ar">
-                  <span class="amplification">الرَّحْمَٰن</span>ِ<span class="amplification">
-                     الرَّحِيمِ</span><span class="amplification">بِسْمِ اللَّهِ</span></div>
-               <div lang="ar">
-                  <span class="amplification">الْحَمْدُ لِلَّهِ</span>
-                  <span class="amplification">رَبِّ الْعَالَمِينَ</span>
-               </div>
-               <div lang="ar">
-                  <span class="amplification">الرَّحْمَٰنِ</span>
-                  <span class="amplification">الرَّحِيمِ</span>
-               </div>
-               <div lang="ar">
-                  <span class="amplification">مَالِكِ يَوْمِ الدِّينِ</span>
-               </div>
-               <div lang="ar">
-                  <span class="anaphora">إِيَّاكَ نَعْبُدُ وَإِيَّاكَ نَسْتَعِينُ</span>
-               </div>
-               <div lang="ar"> اهْدِنَا الصِّرَاطَ الْمُسْتَقِيمَ</div>
-               <div lang="ar"> صِرَاطَ الَّذِينَ أَنْعَمْتَ عَلَيْهِمْ غَيْرِ الْمَغْضُوبِ
-                  عَلَيْهِمْ وَلَا الضَّالِّينَ</div>
+            <div lang="en"> (5) Thee do we worship, and Thine aid we seek.</div>
+            <div class="en-text">
+               <div lang="en"> (6) Show us the straight way,</div>
+               <div lang="en">(7) The way of those on whom Thou hast bestowed Thy Grace, those whose
+                  (portion) is not wrath, and who go not astray. </div>
             </div>
-
-
-            <div>
-               <h2>Ali</h2>
-               <div lang="en"> In the name of Allah, <span class="amplification">Most
-                     Gracious</span>, <span class="amplification">Most Merciful.</span></div>
-               <div lang="en"> Praise be to Allah, <span class="amplification">the Cherisher</span>
-                  and <span class="amplification">Sustainer of the worlds</span>;</div>
-               <div lang="en">
-                  <span class="amplification">Most Gracious</span>, <span class="amplification">Most
-                     Merciful</span>; </div>
-               <div lang="en">
-                  <span class="amplification">Master of the Day of Judgment.</span>
-               </div>
-               <div lang="en"> Thee do we worship, and Thine aid we seek.</div>
-               <div class="en-text">
-                  <div lang="en"> Show us the straight way,</div>
-                  <div lang="en"> The way of those on whom Thou hast bestowed Thy Grace, those whose
-                     (portion) is not wrath, and who go not astray. </div>
-               </div>
+         </div>
+         <div id="div3">
+            <h2>Pickthall</h2>
+            <div lang="en"> (1) In the name of Allah, <span class="amplification">the Beneficent</span>,
+                  <span class="amplification">the Merciful</span>. </div>
+            <div lang="en"> (2)
+               <span class="amplification">Praise be to Allah</span>, <span class="amplification"
+                  >Lord of the Worlds</span>, </div>
+            <div lang="en"> (3)
+               <span class="amplification">The Beneficent</span>, <span class="amplification">the
+                  Merciful</span>. </div>
+            <div lang="en">(4)
+               <span class="amplification">Master of the Day of Judgment</span>, </div>
+            <div lang="en"> (5)
+               <span class="parallelism"> Thee (alone) we worship; Thee (alone) we ask for
+                  help.</span>
             </div>
-
-            <div>
-               <h2>Pickthall</h2>
-               <div lang="en"> In the name of Allah, <span class="amplification">the
-                     Beneficent</span>, <span class="amplification">the Merciful</span>. </div>
-               <div lang="en">
-                  <span class="amplification">Praise be to Allah</span>, <span class="amplification"
-                     >Lord of the Worlds</span>, </div>
-               <div lang="en">
-                  <span class="amplification">The Beneficent</span>, <span class="amplification">the
-                     Merciful</span>. </div>
-               <div lang="en">
-                  <span class="amplification">Master of the Day of Judgment</span>, </div>
-               <div lang="en">
-                  <span class="parallelism"> Thee (alone) we worship; Thee (alone) we ask for
-                     help.</span>
-               </div>
-               <div lang="en"> Show us the straight path, </div>
-               <div lang="en"> The path of those whom Thou hast favoured; Not the (path) of those
-                  who earn Thine anger nor of those who go astray. </div>
-            </div>
-
-
+            <div lang="en"> (6) Show us the straight path, </div>
+            <div lang="en"> (7) The path of those whom Thou hast favoured; Not the (path) of those who
+               earn Thine anger nor of those who go astray. </div>
          </div>
       </main>
    </body>
