added cc license

--- a/Website/index.xhtml
+++ b/Website/index.xhtml
@@ -14,19 +14,22 @@
                 <div class="boxed">
                     <h1>سلام عليكم</h1>
                     <h2>Welcome!</h2>
-                    <p>The Qur'an is the primary holy text of Islam. It is famous in part due to its beautiful prose and poetry. This project presents a cross-linguistic 
-                        analysis of certain selected verses from the Qur'an in its original Arabic and its two most famous English interpretations. Using the tools and techniques of digital humanities,  
-                        we investigate how stylistic and rhetorical devices present in the original text are interpreted in the English translations, with the goal of gaining a better understanding of how a text is transformed
-                        when it undergoes translation.</p>
+                    <p>The Qur'an is the primary holy text of Islam. It is famous in part due to its
+                        beautiful prose and poetry. This project presents a cross-linguistic
+                        analysis of certain selected verses from the Qur'an in its original Arabic
+                        and its two most famous English interpretations. Using the tools and
+                        techniques of digital humanities, we investigate how stylistic and
+                        rhetorical devices present in the original text are interpreted in the
+                        English translations, with the goal of gaining a better understanding of how
+                        a text is transformed when it undergoes translation.</p>
                 </div>
 
                 <div class="boxed">
                     <h3> About this Project</h3>
-                    <p>This project was conceived and designed to fulfil the
-                        requirements of the course "Computational Methods in Humanities,"
-                        taught by Dr. David Birnbaum at the University of Pittsburgh. This project
-                        utilizes many of the tools and technologies we studied this past
-                        semester.</p>
+                    <p>This project was conceived and designed to fulfil the requirements of the
+                        course "Computational Methods in Humanities," taught by Dr. David Birnbaum
+                        at the University of Pittsburgh. This project utilizes many of the tools and
+                        technologies we studied this past semester.</p>
                 </div>
                 <div class="boxed">
                     <h3>About the Developers</h3>
@@ -43,8 +46,10 @@
                         Religious Studies. She's read multiple English translations of the Qur'an
                         and wanted to try engaging with the texts through her newly-developed
                         computational humanities skills.</p>
-                    <p>The developers would like to extend our thanks to <span>Renee Dubaich</span>, our project mentor, for her thoughtful guidance and feedback, as well as 
-                    <span>Dr. Amani Attia</span>, who provided invaluable cultural and literary insight.</p>
+                    <p>The developers would like to extend our thanks to <span>Renee Dubaich</span>,
+                        our project mentor, for her thoughtful guidance and feedback, as well as
+                            <span>Dr. Amani Attia</span>, who provided invaluable cultural and
+                        literary insight.</p>
                 </div>
             </div>
 
@@ -52,5 +57,11 @@
                 src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/453024/882518/main-image"
                 alt="Quranic Manuscript Image from Met Museum Collection. Dated 1851-52 CE" />
         </div>
+        <div class="license-container">
+            <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img
+                    alt="Creative Commons License" style="border-width:0"
+                    src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is
+            licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"
+                >Creative Commons Attribution 4.0 International License</a>.</div>
     </body>
 </html>
