added image credits and included jpg

--- a/Website/index.xhtml
+++ b/Website/index.xhtml
@@ -53,9 +53,16 @@
                 </div>
             </div>
 
-            <img
-                src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/453024/882518/main-image"
-                alt="Quranic Manuscript Image from Met Museum Collection. Dated 1851-52 CE" />
+            <div class="image-container">
+                <a
+                    href="https://collectionapi.metmuseum.org/api/collection/v1/iiif/453024/882518/main-image"
+                        ><img
+                        src="images/quranic-manuscript.jpg"
+                        alt="Quranic Manuscript Image from Met Museum Collection. Dated 1851-52 CE"
+                        title="Image source: The Metropolitan Museum of Art (https://www.metmuseum.org/)"
+                     /></a>
+            </div>
+
         </div>
         <div class="license-container">
             <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img
