added credits and jpgs

--- a/Website/texts_page.xhtml
+++ b/Website/texts_page.xhtml
@@ -14,19 +14,19 @@
             <div class="flexbox">
                 <div class="fleximage">
                     <a href="surah_01.xhtml" target="_self" class="image-container">
-                        <img
-                            src="https://upload.wikimedia.org/wikipedia/commons/5/50/FirstSurahKoran.jpg"
+                        <img src="images/FirstSurahKoran.jpg"
                             alt="calligraphic art of the first Surah in the Qur'an from Muhittin Serin: Hattat Aziz Efendi. Istanbul 1988."
-                            width="164" height="252" />
+                            title="image source: Muhittin Serin: Hattat Aziz Efendi." width="164"
+                            height="252" />
                         <div class="text-overlay">
                             <h2>Surah 1: The Opening</h2>
                         </div>
                     </a>
                     <a href="surah_13.xhtml" target="_self" class="image-container">
-                        <img
-                            src="https://upload.wikimedia.org/wikipedia/commons/8/82/Lightning_Pritzerbe_01_%28MK%29.jpg"
-                            alt="photo of a thunderstorm by Mathias Krumbholz" width="164"
-                            height="252" />
+                        <img src="images/Lightning_Pritzerbe_01.jpg"
+                            alt="photo of a thunderstorm by Mathias Krumbholz"
+                            title="image source: Mathias Krumbhols (https://commons.wikimedia.org/wiki/User:Leviathan1983)"
+                            width="164" height="252" />
                         <div class="text-overlay">
                             <h2>Surah 13: The Thunder</h2>
                         </div>
@@ -34,8 +34,8 @@
 
                     <a href="surah_17.xhtml" target="_self" class="image-container">
                         <img
-                            src="https://upload.wikimedia.org/wikipedia/commons/e/e6/The_beautiful_night_Galaxy.jpg"
-                            alt="Egyptian desert that is roamed by a camel in the wonderous night. by Angie Ahmed Fathy"
+                            src="images/The_beautiful_night_Galaxy.jpg"
+                            alt="Egyptian desert that is roamed by a camel in the wonderous night." title="image source: Angie Ahmed Fathy"
                             width="164" height="252" />
                         <div class="text-overlay">
                             <h2>Surah 17: The Night Journey</h2>
