--- a/Website/surah_01.xhtml
+++ b/Website/surah_01.xhtml
@@ -4,53 +4,53 @@
       <link rel="stylesheet" type="text/css" href="../Website/readingview.css"/><script type="application/javascript" src="../Website/readingview.js"></script><title>Surah1</title>
    </head>
    <body>
-      <div class="checkbox-container"><label class="amplification"><input type="checkbox" id="amplification"/>Amplification</label><label class="emph"><input type="checkbox" id="emph"/>Emphasis</label><label class="irony"><input type="checkbox" id="irony"/>Irony</label><label class="imagery"><input type="checkbox" id="imagery"/>Imagery</label><label class="allusion"><input type="checkbox" id="allusion"/>Allusion</label><label class="contrast"><input type="checkbox" id="contrast"/>Contrast</label><label class="name"><input type="checkbox" id="name"/>Name</label><label class="place"><input type="checkbox" id="place"/>Place</label><label class="rhetoricalQuestion"><input type="checkbox" id="rhetoricalQuestion"/>Rhetorical
-            Question</label><label class="motif"><input type="checkbox" id="motif"/>Motif</label><label class="anaphora"><input type="checkbox" id="anaphora"/>Anaphora</label><label class="parallelism"><input type="checkbox" id="parallelism"/>Parallelism</label><label class="metaphor"><input type="checkbox" id="metaphor"/>Metaphor</label><label class="simile"><input type="checkbox" id="simile"/>Simile</label></div>
-      <div>
-         <p>This Surah Has:</p>
-         <p></p>
-      </div>
-      <main>
-         <div lang="ar">(1) <span class="amplification">الرَّحْمَٰن</span>ِ<span class="amplification">
+      <div class="checkbox-container"><label class="amplification"><input type="checkbox" id="amplification"/>Amplification</label><label class="emph"><input type="checkbox" id="emph"/>Emphasis</label><label class="irony"><input type="checkbox" id="irony"/>Irony</label><label class="imagery"><input type="checkbox" id="imagery"/>Imagery</label><label class="allusion"><input type="checkbox" id="allusion"/>Allusion</label><label class="contrast"><input type="checkbox" id="contrast"/>Contrast</label><label class="name"><input type="checkbox" id="name"/>Name</label><label class="place"><input type="checkbox" id="place"/>Place</label><label class="rhetoricalQuestion"><input type="checkbox" id="rhetoricalQuestion"/>Rhetorical Question</label><label class="motif"><input type="checkbox" id="motif"/>Motif</label><label class="anaphora"><input type="checkbox" id="anaphora"/>Anaphora</label><label class="parallelism"><input type="checkbox" id="parallelism"/>Parallelism</label><label class="metaphor"><input type="checkbox" id="metaphor"/>Metaphor</label><label class="simile"><input type="checkbox" id="simile"/>Simile</label></div>
+      <section>
+         <h2>Arabic</h2>
+         <h2>Ali</h2>
+         <h2>Pickthall</h2>
+      </section>
+      <main>(1) 
+         <div lang="ar"><span class="amplification">الرَّحْمَٰن</span>ِ<span class="amplification">
                الرَّحِيمِ</span><span class="amplification">بِسْمِ اللَّهِ</span></div>
-         <div lang="en">(1)  In the name of Allah, <span class="amplification">Most Gracious</span>,
+         <div lang="en"> In the name of Allah, <span class="amplification">Most Gracious</span>,
             <span class="amplification">Most Merciful.</span></div>
-         <div lang="en">(1)  In the name of Allah, <span class="amplification">the Beneficent</span>,
-            <span class="amplification">the Merciful</span>. </div>
-         <div lang="ar">(2) <span class="amplification">الْحَمْدُ لِلَّهِ</span>
+         <div lang="en"> In the name of Allah, <span class="amplification">the Beneficent</span>,
+            <span class="amplification">the Merciful</span>. </div>(2) 
+         <div lang="ar"><span class="amplification">الْحَمْدُ لِلَّهِ</span>
             <span class="amplification">رَبِّ الْعَالَمِينَ</span></div>
-         <div lang="en">(2)  Praise be to Allah, <span class="amplification">the Cherisher</span> and
+         <div lang="en"> Praise be to Allah, <span class="amplification">the Cherisher</span> and
             <span class="amplification">Sustainer of the worlds</span>;</div>
-         <div lang="en">(2) 
+         <div lang="en">
             <span class="amplification">Praise be to Allah</span>, <span class="amplification">Lord of the
-               Worlds</span>, </div>
-         <div lang="ar">(3) <span class="amplification">الرَّحْمَٰنِ</span>
+               Worlds</span>, </div>(3) 
+         <div lang="ar"><span class="amplification">الرَّحْمَٰنِ</span>
             <span class="amplification">الرَّحِيمِ</span></div>
-         <div lang="en">(3)  &gt;<span class="amplification">Most Gracious</span>, <span class="amplification">Most
+         <div lang="en"> &gt;<span class="amplification">Most Gracious</span>, <span class="amplification">Most
                Merciful</span>; </div>
-         <div lang="en">(3) 
+         <div lang="en">
             <span class="amplification">The Beneficent</span>, <span class="amplification">the
-               Merciful</span>. </div>
-         <div lang="ar">(4) <span class="amplification">مَالِكِ يَوْمِ الدِّينِ</span></div>
-         <div lang="en">(4) 
+               Merciful</span>. </div>(4) 
+         <div lang="ar"><span class="amplification">مَالِكِ يَوْمِ الدِّينِ</span></div>
+         <div lang="en">
             <span class="amplification">Master of the Day of Judgment.</span>
             </div>
-         <div lang="en">(4) 
-            <span class="amplification">Master of the Day of Judgment</span>, </div>
-         <div lang="ar">(5) <span class="anaphora">إِيَّاكَ نَعْبُدُ وَإِيَّاكَ
+         <div lang="en">
+            <span class="amplification">Master of the Day of Judgment</span>, </div>(5) 
+         <div lang="ar"><span class="anaphora">إِيَّاكَ نَعْبُدُ وَإِيَّاكَ
                نَسْتَعِينُ</span></div>
-         <div lang="en">(5)  Thee do we worship, and Thine aid we seek.</div>
-         <div lang="en">(5) <span class="parallelism"> Thee (alone) we worship; Thee (alone) we ask
+         <div lang="en"> Thee do we worship, and Thine aid we seek.</div>
+         <div lang="en"><span class="parallelism"> Thee (alone) we worship; Thee (alone) we ask
                for help.</span>
-            </div>
-         <div lang="ar">(6) اهْدِنَا الصِّرَاطَ الْمُسْتَقِيمَ</div>
-         <div lang="en">(6)  Show us the straight way,</div>
-         <div lang="en">(6)  Show us the straight path, </div>
-         <div lang="ar">(7) صِرَاطَ الَّذِينَ أَنْعَمْتَ عَلَيْهِمْ غَيْرِ الْمَغْضُوبِ عَلَيْهِمْ وَلَا
+            </div>(6) 
+         <div lang="ar">اهْدِنَا الصِّرَاطَ الْمُسْتَقِيمَ</div>
+         <div lang="en"> Show us the straight way,</div>
+         <div lang="en"> Show us the straight path, </div>(7) 
+         <div lang="ar">صِرَاطَ الَّذِينَ أَنْعَمْتَ عَلَيْهِمْ غَيْرِ الْمَغْضُوبِ عَلَيْهِمْ وَلَا
             الضَّالِّينَ</div>
-         <div lang="en">(7)  The way of those on whom Thou hast bestowed Thy Grace, those whose (portion) is
+         <div lang="en"> The way of those on whom Thou hast bestowed Thy Grace, those whose (portion) is
             not wrath, and who go not astray. </div>
-         <div lang="en">(7)  The path of those whom Thou hast favoured; Not the (path) of those who earn
+         <div lang="en"> The path of those whom Thou hast favoured; Not the (path) of those who earn
             Thine anger nor of those who go astray. </div>
       </main>
    </body>
