added citations section

--- a/Website/background_page.xhtml
+++ b/Website/background_page.xhtml
@@ -91,6 +91,53 @@
                 translation of the holy text with exegis.</p>
 
         </div>
+        <div class="boxed">
+            <h3>Citations</h3>
+            <ul>
+                <li>
+                    <a href="http://www.perseus.tufts.edu/hopper/">Perseus Digital Library</a>
+                    <span>Tufts University</span>
+                    <span>n.d.</span>
+                    <span>Web. 28 Apr. 2023.</span>
+                </li>
+                <li>
+                    <a href="https://collectionapi.metmuseum.org/api/collection/v1/iiif/453024/882518/main-image">Quranic Manuscript Image from Met Museum Collection. Dated 1851-52 CE.</a>
+                    <span>The Metropolitan Museum of Art</span>
+                    <span>n.d.</span>
+                    <span>Web.</span>
+                </li>
+                <li>
+                    <a href="https://upload.wikimedia.org/wikipedia/commons/7/71/Marmaduke_Pickthall_Portrait.jpg">Marmaduke Pickthall Portrait</a>
+                    <span>Wikimedia Commons</span>
+                    <span>1920</span>
+                    <span>Web.</span>
+                </li>
+                <li>
+                    <a href="https://upload.wikimedia.org/wikipedia/en/8/8c/Abdullah_Yusuf_Ali_1911.jpg">Abdullah Yusuf Ali 1911</a>
+                    <span>Wikimedia Commons</span>
+                    <span>1911</span>
+                    <span>Web.</span>
+                </li>
+                <li>
+                    <a href="https://commons.wikimedia.org/wiki/File:The_beautiful_night_Galaxy.jpg">The beautiful night Galaxy</a>
+                    <span>Wikimedia Commons</span>
+                    <span>23 March 2021</span>
+                    <span>Web.</span>
+                </li>
+                <li>
+                    <a href="https://commons.wikimedia.org/wiki/File:FirstSurahKoran.jpg">First Surah Koran</a>
+                    <span>Wikimedia Commons</span>
+                    <span>n.d.</span>
+                    <span>Web.</span>
+                </li>
+                <li>
+                    <a href="https://commons.wikimedia.org/wiki/File:Lightning_Pritzerbe_01_(MK).jpg">Lightning Pritzerbe</a>
+                    <span>Wikimedia Commons</span>
+                    <span>24 September 2010</span>
+                    <span>Web.</span>
+                </li>
+            </ul>
+        </div>
     </body>
 
 </html>
