--- a/Website/surah_13.xhtml
+++ b/Website/surah_13.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml">
    <head>
-      <link rel="stylesheet" type="text/css" href="../Website/style.css"/>
-      <link rel="stylesheet" type="text/css" href="../Website/readingview.css"/><script type="application/javascript" src="../Website/readingview.js"></script><title>Surah13</title>
+      <link rel="stylesheet" type="text/css" href="style.css"/>
+      <link rel="stylesheet" type="text/css" href="readingview.css"/><script type="application/javascript" src="readingview.js"></script><title>Surah13</title>
    </head>
    <body>
       <div class="checkbox-container"><label class="amplification"><input type="checkbox" id="amplification"/>Amplification</label><label class="emph"><input type="checkbox" id="emph"/>Emphasis</label><label class="irony"><input type="checkbox" id="irony"/>Irony</label><label class="imagery"><input type="checkbox" id="imagery"/>Imagery</label><label class="allusion"><input type="checkbox" id="allusion"/>Allusion</label><label class="contrast"><input type="checkbox" id="contrast"/>Contrast</label><label class="name"><input type="checkbox" id="name"/>Name</label><label class="place"><input type="checkbox" id="place"/>Place</label><label class="rhetoricalQuestion"><input type="checkbox" id="rhetoricalQuestion"/>Rhetorical Question</label><label class="motif"><input type="checkbox" id="motif"/>Motif</label><label class="anaphora"><input type="checkbox" id="anaphora"/>Anaphora</label><label class="parallelism"><input type="checkbox" id="parallelism"/>Parallelism</label><label class="metaphor"><input type="checkbox" id="metaphor"/>Metaphor</label><label class="simile"><input type="checkbox" id="simile"/>Simile</label></div>
